--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Vektor Trek</title>
+  <title>Vektor Storm</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/fx.css">
 
@@ -22,18 +22,14 @@
       <p>
         You win with <b>200+</b> points; but lose with <b>-100</b> points score.
       </p>
-        
+
       <h3>Controls</h3>
       <p>
         Mouse: Down = Fly, Up = Stop <br>
         Shift: Speed boost <br>
         Ctrl : Progress step by step (Developers)
       </p>
-      
-      <br>
-      <p class="footnote">
-        If the game get's laggy, restart - It's badly programmed ;)
-      </p>
+
     </section>
   </main>
 
@@ -44,7 +40,7 @@
   <script defer src="js/helper/view.js"></script>
 
   <script defer src="js/lib/vector2d.js"></script>
-  
+
   <script defer src="js/core/generator/projectiles.js"></script>
   <script defer src="js/core/generator/vectors.js"></script>
   <script defer src="js/core/objects/phaser.js"></script>
@@ -62,4 +58,3 @@
 
 </body>
 </html>
-
