--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vektor Storm</title>
+    <title>Vector-Storm</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/fx.css" />
   </head>
