--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,8 @@
       <canvas id="app" width="700" height="480"></canvas>
 
       <section class="description">
-        <h1>Vektor Trek</h1>
-        <p>
-          Get extra score by bouncing into enemy ships. Avoid being hit by enemy ship projectiles.
-        </p>
+        <p>Get extra score by bouncing into enemy ships. Avoid being hit by enemy ship projectiles.</p>
         <p>You win with <b>200+</b> points; but lose with <b>-100</b> points score.</p>
-
         <h3>Controls</h3>
         <p>
           Mouse: Down = Fly, Up = Stop <br />
