Fix SonarCloud bug

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
       <section class="description">
         <p>Get extra score by bouncing into enemy ships. Avoid being hit by enemy ship projectiles.</p>
-        <p>You win with <b>200+</b> points; but lose with <b>-100</b> points score.</p>
+        <p>You win with <strong>200+</strong> points; but lose with <strong>-100</strong> points score.</p>
         <h3>Controls</h3>
         <p>
           Mouse: Down = Fly, Up = Stop <br />
