--- a/src/index.html
+++ b/src/index.html
@@ -22,27 +22,6 @@
       </section>
     </main>
 
-    <script defer src="js/helper/collision.js"></script>
-    <script defer src="js/helper/collision-bounce.js"></script>
-    <script defer src="js/helper/collision-projectile.js"></script>
-    <script defer src="js/helper/view.js"></script>
-
-    <script defer src="js/lib/vector2d.js"></script>
-
-    <script defer src="js/core/generator/projectiles.js"></script>
-    <script defer src="js/core/generator/vectors.js"></script>
-
-    <script defer src="js/core/objects/phaser.js"></script>
-    <script defer src="js/core/objects/point.js"></script>
-    <script defer src="js/core/objects/projectile.js"></script>
-    <script defer src="js/core/objects/ship.js"></script>
-    <script defer src="js/core/objects/ship-player.js"></script>
-    <script defer src="js/core/controls.js"></script>
-    <script defer src="js/core/loop.js"></script>
-    <script defer src="js/core/render-loop.js"></script>
-    <script defer src="js/core/score.js"></script>
-    <script defer src="js/core/stage.js"></script>
-
-    <script defer src="js/run.js"></script>
+    <script type="module" src="js/run-module.js"></script>
   </body>
 </html>
