--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vector-Storm</title>
+    <title>Vector Storm</title>
     <link rel="stylesheet" href="css/content.css" />
     <link rel="stylesheet" href="css/fx.css" />
     <link rel="stylesheet" href="css/layout.css" />
@@ -22,6 +22,6 @@
       </section>
     </main>
 
-    <script type="module" src="js/run-module.js"></script>
+    <script defer src="app.bundle.js"></script>
   </body>
 </html>
