--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       </section>
     </main>
 
+    <script src="https://browser.sentry-cdn.com/5.27.3/bundle.min.js" integrity="sha384-1lsHLW0w9KRmqTvsqNn1l9ZgfpxznF2UH5XYC2kdvgLsA3ZwsHQ2GXIXXzodwq8g" crossorigin="anonymous"></script>
+    <script>
+      Sentry.init({ dsn: "https://db405419f23e428eb5a76d902eb6473b@o472775.ingest.sentry.io/5506832" });
+    </script>
     <script defer src="app.bundle.js"></script>
   </body>
 </html>
