--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Vector Storm</title>
-    <link rel="stylesheet" href="css/content.css" />
-    <link rel="stylesheet" href="css/fx.css" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <main id="fx" class="main fx">
@@ -22,9 +20,13 @@
       </section>
     </main>
 
-    <script src="https://browser.sentry-cdn.com/5.27.3/bundle.min.js" integrity="sha384-1lsHLW0w9KRmqTvsqNn1l9ZgfpxznF2UH5XYC2kdvgLsA3ZwsHQ2GXIXXzodwq8g" crossorigin="anonymous"></script>
+    <script
+      src="https://browser.sentry-cdn.com/5.27.3/bundle.min.js"
+      integrity="sha384-1lsHLW0w9KRmqTvsqNn1l9ZgfpxznF2UH5XYC2kdvgLsA3ZwsHQ2GXIXXzodwq8g"
+      crossorigin="anonymous"
+    ></script>
     <script>
-      Sentry.init({ dsn: "https://db405419f23e428eb5a76d902eb6473b@o472775.ingest.sentry.io/5506832" });
+      Sentry.init({ dsn: 'https://db405419f23e428eb5a76d902eb6473b@o472775.ingest.sentry.io/5506832' });
     </script>
     <script defer src="app.bundle.js"></script>
   </body>
