--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Vector Storm</title>
+    <meta name="description" content="Abstract arcade-ish 2D game with a Vanilla JS Canvas engine." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noai, noimageai, noarchive" />
+    <meta name="theme-color" content="#000" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
